(refractor) - rewrite scroll func

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>React and Typescript</title>
+
+    <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
